syntax = "proto3";

package forwarder.proto;

message WsTransmitted {
  Id id = 1;
  WsMsg msg = 2;
}

message Id {
  uint32 port = 1;
  string host = 2;
}

message WsMsg {
  oneof ws_msg_type {
    NewConnection new_connection = 1;
    Eot eot = 2;
    CloseConnection close_connection = 3;
    Data data = 4;
  };
}

message NewConnection {}
message Eot{}
message CloseConnection{}
message Data {
  bytes data = 1; 
}
